# x-veon

./: .gitignore  OpenDRT.md  README.md  backfill_metadata.py  build_dataset.py  build_lum_dataset.py  build_lum_top2000.py  build_top2000_dataset.py  cfa.py  check_cfa.py  checkpoint_registry.py  classify_hf_ha.py  classify_raf.py  compare_output.py  dataset.py  debug_first_strip.py  examine_raf.py  export_onnx.py  fuji_decompress.py  hl_model.py  infer.py  infer_hdr.py  losses.py  model.py  preview_dataset.py  save_reference.py  test_clip_ratio.py  torture_v2.py  train.py  train_hl.py  train_torture.py  train_v4.py  ui.py  xtrans_pattern.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
_obsolete/: README.md  color_correction_matrix.json  color_lut.json  compare_checkpoints.py  dataset.py  dataset_v4_finetune.py  fit_color.py  fit_histogram.py  fit_jpeg_color.py  infer.py  raf_6x6_weighted.py  raf_demosaic_downsample.py  raf_demosaic_ds2.py  raf_to_6x6.py  sharpness_scores.json  train_patches.py  train_patches_ram.py  train_v3.py  train_v4_finetune.py  train_v4_finetune_fast.py
_obsolete/checkpoints_v3/: config.json  history.json
checkpoints_v4/: config.json  history.json
checkpoints_v4.1/: config.json  history.json
checkpoints_v4.2/: config.json  history.json
data/: fuji_jpgs  fullres_dataset  jpeg_patches  lum_available.json  lum_matching.json  sharpness_scores.json  top2000_sharp.json  top200_sharp.json  torture_dataset  xtrans_v4_dataset
docs/: EXPERIMENTS.md  PROJECT.md  REORGANIZATION_SUMMARY.md
ref/: opendrt_reference.py  opendrt_test_vectors.json
scripts/: pull-results.sh  pygo.py  train-remote.sh  train-status.sh
scripts/train/: train_v4.py
src/: xtrans_pattern.py
src/datasets/: build_dataset_v4.py  dataset_v4.py
tests/hlrecon/: compare.py  compare_cfa.mjs  extract_fixture.py  (+4 more)
web/: .gitignore  index.html  model.onnx  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js  vite.config.ts
web/wasm/: .gitignore  Cargo.toml
web/wasm-demosaic/: Cargo.toml
web/wasm-demosaic/src/: lib.rs
web/wasm-rawloader/: Cargo.toml
web/wasm-rawloader/src/: exif_parse.rs
web/wasm/data/cameras/fuji/: x-e4.toml
web/wasm/encoder/: Cargo.toml
web/wasm/encoder/src/: color.rs  encode_avif.rs  encode_tiff.rs  encode_uhdr.rs  exif.rs  lib.rs  opendrt.rs  pipeline.rs  rotation.rs  transfer.rs
web/wasm/rawloader/: Cargo.toml
web/wasm/rawloader/src/: exif_parse.rs  lib.rs
web/wasm/src/: lib.rs
web/wasm/src/decoders/: ari.rs  arw.rs  basics.rs  cr2.rs  crw.rs  dcr.rs  dcs.rs  dng.rs  erf.rs  fuji_compressed.rs  iiq.rs  image.rs  kdc.rs  mef.rs  mod.rs  mos.rs  mrw.rs  nef.rs  nkd.rs  nrw.rs  orf.rs  pef.rs  raf.rs  rw2.rs  srw.rs  tfr.rs  x3f.rs
(+106 files in other folders)
