[package]
name = "rawloader-wasm"
version = "0.37.1"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "A library to extract the data from camera raw formats"
documentation = "https://docs.rs/rawloader/"
#homepage = "..."
repository = "https://github.com/pedrocr/rawloader"
license = "LGPL-2.1"
categories = ["multimedia::images"]
edition = "2018"

build = "data/cameras/join.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
toml = "0.5"
enumn = "0.1"
lazy_static = "1"
byteorder = "1"
wasm-bindgen = "0.2.63"
js-sys = "0.3.56"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]  

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
glob = "0.3"
toml = "0.5"
rustc_version = "0.4"

[profile.release]
panic = "unwind"
opt-level = "s"

[profile.dev]
panic = "unwind"
opt-level = 3
debug = true

[[bin]]
name = "benchmark"
doc = false

[[bin]]
name = "identify"
doc = false
