[package]
name = "xtrans-encoder-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

# Phase 1: JPEG
jpeg-encoder = "0.6"

# Phase 2: TIFF
tiff = "0.9"

# Phase 3: HDR AVIF
rav1e = { version = "0.7", default-features = false }
avif-serialize = "0.8"


[profile.release]
opt-level = "s"
lto = true
